--- a/style.css
+++ b/style.css
@@ -9,6 +9,12 @@ h2{
 	text-align: center;
 }
 
+h3{
+	text-align: left;
+}
+
+
+
 body {
 	background-color: rgb(210,220,210);
 	text-align: center;
