--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@ h2{
 h3{
 	text-align: left;
 	background-color: blue;
+	padding: 14px 25px;
+	display: inline-block;
 	p.solid {border-style: solid;}
 }
 
