--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h2{
 
 h3{
 	text-align: left;
-	background-color: blue;
+	background-color: ;
 	padding: 14px 25px;
 	display: inline-block;
 	p.solid {border-style: solid;}
